fix overflow issue

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ html {
   font-family: "Roboto", sans-serif;
   display: flex;
   flex-direction: column;
+  overflow-x: hidden;
 }
 
 header {
